# DCC014

./: .gitignore  CMakeLists.txt  README.md  start.sh
app/: main.cpp
include/: aresta.h  fazGrafo.h  grafo.h  heapMin.h  lista.h  no.h  profundidade.h  vertice.h
include/algoritmos/: aEstrela.h  backtracking.h  gulosa.h  largura.h  ordenada.h
src/: grafo.cpp  lista.cpp
src/algoritmos/: aEstrela.cpp  backtracking.cpp  gulosa.cpp  largura.cpp  ordenada.cpp  profundidade.cpp
src/estruturas/: grafo.cpp  lista.cpp
src/util/: fazGrafo.cpp
test/: test_aresta.cpp  test_backtracking.cpp  test_buscaAEstrela.cpp  test_buscaGulosa.cpp  test_buscaLargura.cpp  test_buscaOrdenada.cpp  test_fazGrafo.cpp  test_fazerGrafo.cpp  test_fazerGrafoSemClasseGrafo.cpp  test_grafo.cpp  test_heapMin.cpp  test_lista.cpp  test_profundidade.cpp  test_vertice.cpp
tests/: CMakeLists.txt
